add files to repo

--- a/index.html
+++ b/index.html
@@ -1,7 +1,75 @@
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Jason Kim</title>
+  <link rel="stylesheet" href="https://unpkg.com/tachyons@4.6.1/css/tachyons.min.css"/>
+  <link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-touch-icon.png?v=2">
+  <link rel="icon" type="image/png" href="favicons/favicon-32x32.png?v=2" sizes="32x32">
+  <link rel="icon" type="image/png" href="favicons/favicon-16x16.png?v=2" sizes="16x16">
+  <link rel="shortcut icon" href="favicons/favicon.ico?v=2">
+  <meta name="msapplication-config" content="favicons/browserconfig.xml">
 </head>
-<body>
-  <h1>Hello, I'm Jason</h1>
+<body class="avenir bg-black white">
+  <div class="mw9 center">
+    <main class="cf relative z-1">
+      <div class="cf ph3-l pt6-l pt5 pb5-ns pb3">
+        <section class="w-30-l fl-l ph3">
+          <h2 class="fw7 f1-l f3-ns f5 lh-title mt0">Jason Kim</h2>
+        </section>
+        <section class="fl w-60 cf ph3">
+          <p class="mt0 f1-l f3-ns f5 lh-title">Product + UX Designer</p>
+          <p class="mt0 f3-l f4-ns f5 lh-copy light-silver">I'm always trying to translate my skills into developing products that people ❤️️</p>
+          <p class="mt0 f3-l f4-ns f5 lh-copy light-silver">
+            <a class="link light-blue bb" href="">Who the heck is Jason Kim?</a>
+          </p>
+
+        </section>
+      </div>
+      <div class="cf ph3-l pv5-ns pv3">
+        <section class="w-30-l fl-l ph3">
+          <h2 class="fw3 f1-l f3-ns f5 lh-title mt0">Work</h2>
+        </section>
+        <section class="cf ph2 ph0-l w-70-l fr-l mb5">
+          <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
+            <div class="aspect-ratio aspect-ratio--8x5 dim">
+              <a class="br2 db aspect-ratio--object cover" href="" style="background:url(img/loree_logo.gif) no-repeat center center"></a>
+            </div>
+            <p class="mt3 mb0 f6 light-blue">Voice UI for Language and Culture</p>
+            <h3 class="mb3 mt0 f2-l f3-ns f4 fw3 lh-copy">
+              <a class="link white bb" href="">Loree</a>
+            </h3>
+          </article>
+          <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
+            <div class="aspect-ratio aspect-ratio--8x5 dim">
+              <a class="br2 db aspect-ratio--object cover" href="" style="background:url(img/medialets.jpg) no-repeat center center"></a>
+            </div>
+            <p class="mt3 mb0 f6 light-blue">Data-Inspired User Experience</p>
+            <h3 class="mb3 mt0 f2-l f3-ns f4 fw3 lh-copy">
+              <a class="link white bb" href="">Servo</a>
+            </h3>
+          </article>
+          <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
+            <div class="aspect-ratio aspect-ratio--8x5 dim">
+              <a class="br2 db aspect-ratio--object cover" href="" style="background:url(img/designface.jpeg) no-repeat center center"></a>
+            </div>
+            <p class="mt3 mb0 f6 light-blue">Goofy</p>
+            <h3 class="mb3 mt0 f2-l f3-ns f4 fw3 lh-copy">
+              <a class="link white bb" href="">Illustrations</a>
+            </h3>
+          </article>
+        </section>
+      </div>
+      <footer class="cf ph3-l pt2-ns pt2 pb7-l pb5">
+        <section class="w-30-l fl-l ph3">
+          <h2 class="fw3 f1-l f3-ns f5 lh-title mt0">Say Hi 👋</h2>
+        </section>
+        <div class="w-70 mb4 ph3-l ph3 fl lh-title">
+          <a class="mt0 f1-l f3-ns f5 lh-title link bb b--white white" href="mailto:jajasonkim@gmail.com">jajasonkim@gmail.com</a>
+        </div>
+      </footer>
+    </main>
+  </div>
 </body>
 </html>
