--- a/index.html
+++ b/index.html
@@ -5,70 +5,102 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Jason Kim</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.6.1/css/tachyons.min.css"/>
+  <link rel="stylesheet" href="css/custom.css"/>
   <link rel="apple-touch-icon" sizes="152x152" href="favicons/apple-touch-icon.png?v=2">
   <link rel="icon" type="image/png" href="favicons/favicon-32x32.png?v=2" sizes="32x32">
   <link rel="icon" type="image/png" href="favicons/favicon-16x16.png?v=2" sizes="16x16">
   <link rel="shortcut icon" href="favicons/favicon.ico?v=2">
   <meta name="msapplication-config" content="favicons/browserconfig.xml">
 </head>
-<body class="avenir bg-black white">
-  <div class="mw9 center">
+<body class="bg-black white">
+  <div class="mw8 center">
     <main class="cf relative z-1">
-      <div class="cf ph3-l pt6-l pt5 pb5-ns pb3">
-        <section class="w-30-l fl-l ph3">
-          <h2 class="fw7 f1-l f3-ns f5 lh-title mt0">Jason Kim</h2>
+      <div class="test cf ph3-l pt6-l pt5 pb5-ns pb3">
+        <section class="test w-30-l fl-l ph3">
+          <h1 class="show-firstfadein test fw7 f2-l f2-ns f5 lh-title mt0">Jason Kim</h1>
         </section>
-        <section class="fl w-60 cf ph3">
-          <p class="mt0 f1-l f3-ns f5 lh-title">Product + UX Designer</p>
-          <p class="mt0 f3-l f4-ns f5 lh-copy light-silver">I'm always trying to translate my skills into developing products that people ❤️️</p>
+        <section class="hide-on-load fl w-80 w-60-m w-50-l cf ph3">
+          <p class="mt0 f3-l f3-ns f5 lh-title">Product + UX Designer</p>
+          <p class="mt0 mb0 f3-l f4-ns f5 lh-copy light-silver">Trying to make design more lovable,</p>
+          <p class="mt0 f3-l f4-ns f5 lh-copy light-silver">one honest conversation at a time ❤️</p>
           <p class="mt0 f3-l f4-ns f5 lh-copy light-silver">
-            <a class="link light-blue bb" href="">Who the heck is Jason Kim?</a>
+            <a class="link light-blue bb" href="">But who the heck is Jason Kim?</a>
           </p>
-
         </section>
       </div>
       <div class="cf ph3-l pv5-ns pv3">
         <section class="w-30-l fl-l ph3">
-          <h2 class="fw3 f1-l f3-ns f5 lh-title mt0">Work</h2>
+          <h2 class="fw7 f3-l f3-ns f5 lh-title mt0 light-silver">Work</h2>
         </section>
-        <section class="cf ph2 ph0-l w-70-l fr-l mb5">
+        <section class="cf ph2 ph0-l w-70-l fr-l mb3">
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
             <div class="aspect-ratio aspect-ratio--8x5 dim">
-              <a class="br2 db aspect-ratio--object cover" href="" style="background:url(img/loree_logo.gif) no-repeat center center"></a>
+              <a class="br4 db aspect-ratio--object cover" href="work/loree.html" style="background:url(img/loree_logo.gif) no-repeat center center"></a>
             </div>
             <p class="mt3 mb0 f6 light-blue">Voice UI for Language and Culture</p>
-            <h3 class="mb3 mt0 f2-l f3-ns f4 fw3 lh-copy">
-              <a class="link white bb" href="">Loree</a>
+            <h3 class="mb3 mt0 f3-l f3-ns f4 fw3 lh-copy">
+              <a class="link white bb" href="work/loree.html">Loree</a>
             </h3>
           </article>
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
             <div class="aspect-ratio aspect-ratio--8x5 dim">
-              <a class="br2 db aspect-ratio--object cover" href="" style="background:url(img/medialets.jpg) no-repeat center center"></a>
+              <a class="br4 db aspect-ratio--object cover" href="" style="background:url(img/medialets.jpg) no-repeat center center"></a>
             </div>
             <p class="mt3 mb0 f6 light-blue">Data-Inspired User Experience</p>
-            <h3 class="mb3 mt0 f2-l f3-ns f4 fw3 lh-copy">
+            <h3 class="mb3 mt0 f3-l f3-ns f4 fw3 lh-copy">
               <a class="link white bb" href="">Servo</a>
             </h3>
           </article>
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
             <div class="aspect-ratio aspect-ratio--8x5 dim">
-              <a class="br2 db aspect-ratio--object cover" href="" style="background:url(img/designface.jpeg) no-repeat center center"></a>
+              <a class="br4 db aspect-ratio--object cover" href="" style="background:url(img/illustrations.jpg) no-repeat center center"></a>
             </div>
-            <p class="mt3 mb0 f6 light-blue">Goofy</p>
-            <h3 class="mb3 mt0 f2-l f3-ns f4 fw3 lh-copy">
+            <p class="mt3 mb0 f6 light-blue">I'm a fool for a pen tool</p>
+            <h3 class="mb3 mt0 f3-l f3-ns f4 fw3 lh-copy">
               <a class="link white bb" href="">Illustrations</a>
             </h3>
           </article>
         </section>
       </div>
-      <footer class="cf ph3-l pt2-ns pt2 pb7-l pb5">
-        <section class="w-30-l fl-l ph3">
-          <h2 class="fw3 f1-l f3-ns f5 lh-title mt0">Say Hi 👋</h2>
-        </section>
-        <div class="w-70 mb4 ph3-l ph3 fl lh-title">
-          <a class="mt0 f1-l f3-ns f5 lh-title link bb b--white white" href="mailto:jajasonkim@gmail.com">jajasonkim@gmail.com</a>
+      <div class="cf ph3-l pv5-ns pv3">
+        <div class="w-30-l fl-l ph3">
+          <h2 class="pv3 fw7 f3-l f3-ns f5 lh-title mt0 light-silver">Say Hi 👋</h2>
         </div>
-      </footer>
+        <div class="w-70-l fr-l">
+          <div class="flex flex-wrap f3 fw5 lh-title">
+            <div class="w-50 ph3">
+              <div class="pv3 bb b--white-50">
+                <a class="mt0 f3-l f3-ns f5 lh-title link b white hover-light-red no-underline" href="mailto:jajasonkim@gmail.com">email</a>
+              </div>
+            </div>
+            <div class="w-50 ph3">
+              <div class="pv3 bb b--white-50">
+                <a class="mt0 f3-l f3-ns f5 lh-title link b white hover-light-purple no-underline" href="https://www.linkedin.com/in/miknosaj/">linkedin</a>
+              </div>
+            </div>
+            <div class="w-50 ph3">
+              <div class="pv3 bb b--white-50">
+                <a class="mt0 f3-l f3-ns f5 lh-title link b white hover-light-blue no-underline" href="http://twitter.com/miknosaj">twitter</a>
+              </div>
+            </div>
+            <div class="w-50 ph3">
+              <div class="pv3 bb b--white-50">
+                <a class="mt0 f3-l f3-ns f5 lh-title link b white hover-yellow no-underline" href="http://instagram.com/kim.json">instagram</a>
+              </div>
+            </div>
+            <div class="w-50 ph3">
+              <div class="pv3 bb b--white-50">
+                <a class="mt0 f3-l f3-ns f5 lh-title link b white hover-light-green no-underline" href="https://medium.com/@kim.json">medium</a>
+              </div>
+            </div>
+            <div class="w-50 ph3">
+              <div class="pv3 bb b--white-50">
+                <a class="mt0 f3-l f3-ns f5 lh-title link b white hover-light-pink no-underline" href="https://dribbble.com/miknosaj">dribbble</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </div>
 </body>
