fix fadein animatins

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     <main class="cf relative z-1">
       <div class="test cf ph3-l pt6-l pt5 pb5-ns pb3">
         <section class="test w-30-l fl-l ph3">
-          <h1 class="show-firstfadein test fw7 f2-l f2-ns f5 lh-title mt0">Jason Kim</h1>
+          <h1 class="show-first fw7 f2-l f2-ns f5 lh-title mt0">Jason Kim</h1>
         </section>
-        <section class="hide-on-load fl w-80 w-60-m w-50-l cf ph3">
-          <p class="mt0 f3-l f3-ns f5 lh-title">Product + UX Designer</p>
-          <p class="mt0 mb0 f3-l f4-ns f5 lh-copy light-silver">Trying to make design more lovable,</p>
-          <p class="mt0 f3-l f4-ns f5 lh-copy light-silver">one honest conversation at a time ❤️</p>
-          <p class="mt0 f3-l f4-ns f5 lh-copy light-silver">
+        <section class="fl w-80 w-60-m w-50-l cf ph3">
+          <p class="show-second mt0 f3-l f3-ns f5 lh-title">Product + UX Designer</p>
+          <p class="show-second mt0 mb0 f3-l f4-ns f5 lh-copy light-silver">Trying to make design more lovable,</p>
+          <p class="show-second mt0 f3-l f4-ns f5 lh-copy light-silver">one honest conversation at a time ❤️</p>
+          <p class="show-third mt0 f3-l f4-ns f5 lh-copy light-silver">
             <a class="link light-blue bb" href="">But who the heck is Jason Kim?</a>
           </p>
         </section>
       </div>
       <div class="cf ph3-l pv5-ns pv3">
-        <section class="w-30-l fl-l ph3">
+        <section class="show-second w-30-l fl-l ph3">
           <h2 class="fw7 f3-l f3-ns f5 lh-title mt0 light-silver">Work</h2>
         </section>
-        <section class="cf ph2 ph0-l w-70-l fr-l mb3">
+        <section class="show-second cf ph2 ph0-l w-70-l fr-l mb3">
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
             <div class="aspect-ratio aspect-ratio--8x5 dim">
               <a class="br4 db aspect-ratio--object cover" href="work/loree.html" style="background:url(img/loree_logo.gif) no-repeat center center"></a>
@@ -103,5 +103,6 @@
       </div>
     </main>
   </div>
+  <script src="js/main.js"></script>
 </body>
 </html>
