add about and loree pages

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
   <link rel="shortcut icon" href="favicons/favicon.ico?v=2">
   <meta name="msapplication-config" content="favicons/browserconfig.xml">
 </head>
-<body class="bg-black white">
+<body class="bg-black near-white">
   <div class="mw8 center">
     <main class="cf relative z-1">
-      <div class="test cf ph3-l pt6-l pt5 pb5-ns pb3">
+      <div class="cf ph3-l pt6-l pt5 pb5-ns pb3">
         <section class="test w-30-l fl-l ph3">
           <h1 class="show-first fw7 f2-l f2-ns f5 lh-title mt0">Jason Kim</h1>
         </section>
         <section class="fl w-80 w-60-m w-50-l cf ph3">
-          <p class="show-second mt0 f3-l f3-ns f5 lh-title">Product + UX Designer</p>
+          <p class="show-second mt0 mb2 f2-l f2-ns f5 lh-title">Product + UX Designer</p>
           <p class="show-second mt0 mb0 f3-l f4-ns f5 lh-copy light-silver">Trying to make design more lovable,</p>
           <p class="show-second mt0 f3-l f4-ns f5 lh-copy light-silver">one honest conversation at a time ❤️</p>
           <p class="show-third mt0 f3-l f4-ns f5 lh-copy light-silver">
-            <a class="link light-blue bb" href="">But who the heck is Jason Kim?</a>
+            <a class="link light-blue bb" href="work/about.html">But who the heck is Jason Kim?</a>
           </p>
         </section>
       </div>
@@ -62,7 +62,7 @@
           </article>
         </section>
       </div>
-      <div class="cf ph3-l pv5-ns pv3">
+      <div class="mt0 cf ph3-l pt0 pb5">
         <div class="w-30-l fl-l ph3">
           <h2 class="pv3 fw7 f3-l f3-ns f5 lh-title mt0 light-silver">Say Hi 👋</h2>
         </div>
