--- a/work/loree.html
+++ b/work/loree.html
@@ -12,78 +12,35 @@
   <link rel="shortcut icon" href="favicons../favicon.ico?v=2">
   <meta name="msapplication-config" content="../favicons/browserconfig.xml">
 </head>
-<body>
+<body class="bg-black near-white">
   <main>
-    <article class="bg-white">
+    <article class="show-first w-100 w-60-l center">
       <div class="ph4 ph5-m ph6-l">
-        <div class="pv5 f4 f2-ns measure center">
-          <h1 class="fw6 f1 fl w-100 black-70 mt0 mb3 avenir">Project Title #034</h1>
-          <p class="db lh-copy black-70 serif fw1 mv0 f4 f3-m f2-l measure baskerville">
-            A short description of your project. Maybe a few notes concerning your
-            constraints and process.  Standard lorem ipsum dolor sit amet, consectetur adipisicing
-            elit, sed do eiusmod tempor incididunt ut labore etc. al dolore magna
-            aliqua. Ut enim ad.
+        <div class="pv5 f5f2-ns  center">
+          <a class="f6 link white no-underline" href="../index.html">
+            ← back
+          </a>
+          <h2 class="fw6 f2 fl w-100 mb3 ">OVERVIEW</h2>
+          <p class="db lh-copy fw1 mv0 f6 f5-m f5-l ">
+            I worked alongside a small team of designers from user research to product design. We designed for Voice UI’s and how they might be used to empower immigrant families to raise their children to be bilingual in a culturally immersive home. 
           </p>
         </div>
-        <div class="cf mw8 center">
-          <div class='fl w-33 w-50-m w-33-l pr2 pr2-l'>
-            <div class="pv6 cover bg-center" style="background: url(http://mrmrs.github.io/photos/002.jpg);"></div>
-          </div>
-          <div class='fl w-33 w-50-m w-33-l ph3 pr0-m ph3-l'>
-            <div class="pv6 cover bg-center" style="background-image: url(http://mrmrs.github.io/photos/003.jpg);"></div>
-          </div>
-          <div class='fl w-33 w-100-m w-33-l pl2 pl0-m pl2-l mt4-m'>
-            <div class="pv6 cover bg-center" style="background-image: url(http://mrmrs.github.io/photos/004.jpg);"></div>
-          </div>
-        </div>
-        <div class="measure f3 center mv5 black-70">
-          <h1 class="fw6 f3 avenir">The subtitle for the project</h1>
-          <p class="lh-copy measure f4 f3-ns black-70 baskerville">
-            Back in the office after his vacation on a 154-foot rented yacht named Mister Terrible, he feels that relaxation slipping away. He feels pulled inward, toward his own most valuable and destructive traits. Slights roll through his mind, eating at him: worst record ever, can't build a team, absentee landlord. Jordan reads the things written about him, the fuel arriving in a packet of clips his staff prepares. He knows what people say. He needs to know, a needle for a hungry vein. There's a palpable simmering whenever you're around Jordan, as if Air Jordan is still in there, churning, trying to escape. It must be strange to be locked in combat with the ghost of your former self.
-          </p>
-          <p class="lh-copy measure f4 f3-ns black-70 baskerville">
-            The memories came to him, how he felt then. "It was very pure, if I can say it right," he'd explain later. "It was pure in 1984 … I was still dreaming." During the Olympics, he was deep in negotiations with Nike for his first shoe contract. He traded pins with other athletes. Eight years later, when he was the most famous person in the world and the Dream Team was forced to stay outside the Olympic Village, he'd be disappointed when that separation kept him from swapping pins again.
-          </p>
-        </div>
-        <img src="http://mrmrs.github.io/photos/005.jpg" class="db w-100"/>
-        <blockquote class="mh0 pr0 mt5">
-          <p class="f2 f1-l fw1 mv0 tc lh-title baskerville">
-            “I remember going up to that McDonald's and getting my damn McRib. When I first got there.”
-          </p>
-          <p class="tc f6 gray">
-            Michael Jordan
+        <blockquote class="mh0 pr0 mt3">
+          <p class="f3 f2-ns fw1 mv0 tc lh-title ">
+            “How might Voice UI's be used as tools for learning and celebrating the values of our cultures?”
           </p>
         </blockquote>
-        <div class="measure f4 f3-ns center mv5 black-70">
-          <p class="lh-copy measure f3 black-70 baskerville">
-            There's an unspoken shadow over the stories about that town house on Essex Drive. James Jordan remodeled the basement for his son. Did all the work himself, because he'd never let Michael pay for something he could do on his own. The first winter, while Michael was out of town for the All-Star Game, his pipes froze. His dad ripped out the walls, replacing the pipes himself, patching and repainting when he finished. He spent two weeks fixing his son's home. James and Mike -- that's where all this nostalgia has been headed, from the moment it began.
+        <div class="show-second w- aspect-ratio aspect-ratio--16x9 mv5">
+          <iframe src="https://player.vimeo.com/video/229846750?title=0&byline=0&portrait=0" class="aspect-ratio--object" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        </div>
+        <div class=" f6 center mv5 ">
+          <p class="lh-copy  f6 f5-ns">
+            Loree is an Artificially Intelligent companion that incorporates language through conversation and storytelling to introduce cultural concepts to children in immigrant families. As children grow older and their speech patterns become more complex, Loree helps expand their understanding of abstract concepts and ensures that parents are taking an active role in this learning process.
           </p>
-          <div class="aspect-ratio aspect-ratio--16x9 mv5">
-            <iframe src="https://www.youtube.com/embed/LAr6oAKieHk" class="aspect-ratio--object" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-          </div>
         </div>
       </div>
     </article>
-    <section class="cf mt5 pv5 bt b--black-05 ph6-l">
-      <h1 class="tc f5 ttu fw6 tracked mb4 avenir">Other Projects</h1>
-      <a href="#0" class="fl w-third w-25-ns border-box overflow-hidden ba bw2 white" title="">
-        <div class="grow cover bg-center pv5 pv6-l" style="background-image:url(https://s3-us-west-2.amazonaws.com/prnt/hw-080411-cargo_960.jpg);"></div>
-      </a>
-      <a href="#0" class="fl w-third w-25-ns border-box overflow-hidden  ba bw2 white" title="">
-        <div class="grow cover bg-top pv5 pv6-l" style="background-image:url(https://s3-us-west-2.amazonaws.com/prnt/hwspringtour-cargo_960-1.jpg);"></div>
-      </a>
-      <a href="#0" class="fl w-third w-25-ns border-box overflow-hidden ba bw2 white" title="">
-        <div class="grow cover bg-top pv5 pv6-l" style="background-image:url(https://s3-us-west-2.amazonaws.com/prnt/cc010611.s_960.jpg);"></div>
-      </a>
-      <a href="#0" class="fl w-100 w-25-ns border-box overflow-hidden ba bw2 white" title="">
-        <div class="grow cover bg-top pv5 pv6-l" style="background-image:url(https://s3-us-west-2.amazonaws.com/prnt/adam-stern-031209_960-2.jpg);"></div>
-      </a>
-      <a href="#0" class="fl w-50 border-box overflow-hidden ba bw2 white" title="">
-        <div class="grow cover bg-center pv5 pv7-l" style="background-image:url(https://s3-us-west-2.amazonaws.com/prnt/zh170311.4.cargo_960.jpg);"></div>
-      </a>
-      <a href="#0" class="fl w-50 border-box overflow-hidden ba bw2 white" title="">
-        <div class="grow cover bg-center pv5 pv7-l" style="background-image:url(https://s3-us-west-2.amazonaws.com/prnt/hw090911_960.jpg);"></div>
-      </a>
-    </section>
   </main>
+  <script src="../js/main.js"></script>
 </body>
+</html>
