fix margins and add ixda awards link

--- a/work/loree.html
+++ b/work/loree.html
@@ -14,26 +14,27 @@
 </head>
 <body class="bg-black near-white">
   <main>
-    <article class="show-first w-100 w-60-l center">
+    <article class="show-first w-100 w-70-l center">
       <div class="ph4 ph5-m ph6-l">
-        <div class="pv5 f5f2-ns  center">
+        <div class="pv5 f5 f2-ns  center">
           <a class="f6 link white no-underline" href="../index.html">
             ← back
           </a>
-          <h2 class="fw6 f2 fl w-100 mb3 ">OVERVIEW</h2>
+          <h2 class="fw6 f3 fl w-100 mb3 ">OVERVIEW</h2>
           <p class="db lh-copy fw1 mv0 f6 f5-m f5-l ">
             I worked alongside a small team of designers from user research to product design. We designed for Voice UI’s and how they might be used to empower immigrant families to raise their children to be bilingual in a culturally immersive home. 
           </p>
         </div>
         <blockquote class="mh0 pr0 mt3">
-          <p class="f3 f2-ns fw1 mv0 tc lh-title ">
+          <p class="f3 f2-ns fw1 mt0 mb5 tc lh-title ">
             “How might Voice UI's be used as tools for learning and celebrating the values of our cultures?”
           </p>
         </blockquote>
-        <div class="show-second w- aspect-ratio aspect-ratio--16x9 mv5">
+        <a  href="http://awards.ixda.org/blog/2017/the-2018-interaction-awards-shortlist/"><img class="w-30 w-20-ns" src="../img/2018-interaction-shortlist.png"></img></a>
+        <div class="show-second w- aspect-ratio aspect-ratio--16x9 mt0 mb5">
           <iframe src="https://player.vimeo.com/video/229846750?title=0&byline=0&portrait=0" class="aspect-ratio--object" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
-        <div class=" f6 center mv5 ">
+        <div class=" f6 center mv4 ">
           <p class="lh-copy  f6 f5-ns">
             Loree is an Artificially Intelligent companion that incorporates language through conversation and storytelling to introduce cultural concepts to children in immigrant families. As children grow older and their speech patterns become more complex, Loree helps expand their understanding of abstract concepts and ensures that parents are taking an active role in this learning process.
           </p>
