fix fade in timing and font sizing on index page

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
         </section>
         <section class="fl w-80 w-60-m w-50-l cf ph3">
           <p class="show-second mt0 mb2 f2-l f2-ns f5 lh-title">Product + UX Designer</p>
-          <p class="show-second mt0 mb0 f3-l f4-ns f5 lh-copy light-silver">Trying to make design more lovable,</p>
-          <p class="show-second mt0 f3-l f4-ns f5 lh-copy light-silver">one honest conversation at a time ❤️</p>
-          <p class="show-third mt0 f3-l f4-ns f5 lh-copy light-silver">
+          <p class="show-second mt0 mb0 f4-l f4-ns f5 lh-copy light-silver">Trying to make design more lovable,</p>
+          <p class="show-second mt0 f4-l f4-ns f5 lh-copy light-silver">one honest conversation at a time ❤️</p>
+          <p class="show-third mt0 f4-l f4-ns f5 lh-copy light-silver">
             <a class="link light-blue bb" href="work/about.html">But who the heck is Jason Kim?</a>
           </p>
         </section>
@@ -38,7 +38,7 @@
               <a class="br4 db aspect-ratio--object cover" href="work/loree.html" style="background:url(img/loree_logo.gif) no-repeat center center"></a>
             </div>
             <p class="mt3 mb0 f6 light-blue">Voice UI for Language and Culture</p>
-            <h3 class="mb3 mt0 f3-l f3-ns f4 fw3 lh-copy">
+            <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
               <a class="link white bb" href="work/loree.html">Loree</a>
             </h3>
           </article>
@@ -47,7 +47,7 @@
               <a class="br4 db aspect-ratio--object cover" href="" style="background:url(img/medialets.jpg) no-repeat center center"></a>
             </div>
             <p class="mt3 mb0 f6 light-blue">Data-Inspired User Experience</p>
-            <h3 class="mb3 mt0 f3-l f3-ns f4 fw3 lh-copy">
+            <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
               <a class="link white bb" href="">Servo</a>
             </h3>
           </article>
@@ -56,13 +56,13 @@
               <a class="br4 db aspect-ratio--object cover" href="" style="background:url(img/illustrations.jpg) no-repeat center center"></a>
             </div>
             <p class="mt3 mb0 f6 light-blue">I'm a fool for a pen tool</p>
-            <h3 class="mb3 mt0 f3-l f3-ns f4 fw3 lh-copy">
+            <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
               <a class="link white bb" href="">Illustrations</a>
             </h3>
           </article>
         </section>
       </div>
-      <div class="mt0 cf ph3-l pt0 pb5">
+      <div class="show-second mt0 cf ph3-l pt0 pb5">
         <div class="w-30-l fl-l ph3">
           <h2 class="pv3 fw7 f3-l f3-ns f5 lh-title mt0 light-silver">Say Hi 👋</h2>
         </div>
@@ -70,32 +70,32 @@
           <div class="flex flex-wrap f3 fw5 lh-title">
             <div class="w-50 ph3">
               <div class="pv3 bb b--white-50">
-                <a class="mt0 f3-l f3-ns f5 lh-title link b white hover-light-red no-underline" href="mailto:jajasonkim@gmail.com">email</a>
+                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-light-red no-underline" href="mailto:jajasonkim@gmail.com">email</a>
               </div>
             </div>
             <div class="w-50 ph3">
               <div class="pv3 bb b--white-50">
-                <a class="mt0 f3-l f3-ns f5 lh-title link b white hover-light-purple no-underline" href="https://www.linkedin.com/in/miknosaj/">linkedin</a>
+                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-light-purple no-underline" href="https://www.linkedin.com/in/miknosaj/">linkedin</a>
               </div>
             </div>
             <div class="w-50 ph3">
               <div class="pv3 bb b--white-50">
-                <a class="mt0 f3-l f3-ns f5 lh-title link b white hover-light-blue no-underline" href="http://twitter.com/miknosaj">twitter</a>
+                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-light-blue no-underline" href="http://twitter.com/miknosaj">twitter</a>
               </div>
             </div>
             <div class="w-50 ph3">
               <div class="pv3 bb b--white-50">
-                <a class="mt0 f3-l f3-ns f5 lh-title link b white hover-yellow no-underline" href="http://instagram.com/kim.json">instagram</a>
+                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-yellow no-underline" href="http://instagram.com/kim.json">instagram</a>
               </div>
             </div>
             <div class="w-50 ph3">
               <div class="pv3 bb b--white-50">
-                <a class="mt0 f3-l f3-ns f5 lh-title link b white hover-light-green no-underline" href="https://medium.com/@kim.json">medium</a>
+                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-light-green no-underline" href="https://medium.com/@kim.json">medium</a>
               </div>
             </div>
             <div class="w-50 ph3">
               <div class="pv3 bb b--white-50">
-                <a class="mt0 f3-l f3-ns f5 lh-title link b white hover-light-pink no-underline" href="https://dribbble.com/miknosaj">dribbble</a>
+                <a class="mt0 f4-l f4-ns f5 lh-title link b white hover-light-pink no-underline" href="https://dribbble.com/miknosaj">dribbble</a>
               </div>
             </div>
           </div>
