--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
           </article>
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
             <div class="aspect-ratio aspect-ratio--8x5 dim">
-              <a class="br4 db aspect-ratio--object cover" href="" style="background:url(img/illustrations.jpg) no-repeat center center"></a>
+              <a class="br4 db aspect-ratio--object cover" href="work/illustrations.html" style="background:url(img/illustrations.jpg) no-repeat center center"></a>
             </div>
             <p class="mt3 mb0 f6 light-blue">I'm a fool for a pen tool</p>
             <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
-              <a class="link white bb" href="">Illustrations</a>
+              <a class="link white bb" href="work/illustrations.html">Illustrations</a>
             </h3>
           </article>
         </section>
