--- a/index.html
+++ b/index.html
@@ -60,6 +60,15 @@
               <a class="link white bb" href="work/illustrations.html">Illustrations</a>
             </h3>
           </article>
+          <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
+            <div class="aspect-ratio aspect-ratio--8x5 dim">
+              <a class="br4 db aspect-ratio--object cover" href="work/photography.html" style="background:url(img/reach1.jpg) no-repeat center center"></a>
+            </div>
+            <p class="mt3 mb0 f6 light-blue">*click* *click*</p>
+            <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
+              <a class="link white bb" href="work/photography.html">Photography</a>
+            </h3>
+          </article>
         </section>
       </div>
       <div class="show-second mt0 cf ph3-l pt0 pb5">
