--- a/work/photography.html
+++ b/work/photography.html
@@ -15,16 +15,16 @@
 <body class="bg-black near-white">
   <main>
     <article class="cf pa3 mw9 center">
-      <header class="fl w-100 w-50-l pa3-m pa4-l mb3 mb5-l">
+      <header class="show-first fl w-100 w-50-l pa3-m pa4-l mb3 mb5-l">
         <a class="f6 link white no-underline" href="../index.html">
           ← back
         </a>
         <h2 class="lh-title f3 b mt0">
-          "Ducasse says to his friend Mallarmé, “You know, I’ve got a lot of good ideas for poems, but the poems are never very good.” 
-          Mallarmé says, “Of course, you don’t make poems out of ideas, you make poems out of words.”
+          Ducasse says to his friend Mallarmé, “You know, I’ve got a lot of good ideas for poems, but the poems are never very good.” 
+          Mallarmé says, “Of course, you don’t make poems out of ideas, you make poems out of words.
         </h2>
       </header>
-      <section class="fl w-100">
+      <section class="show-second fl w-100">
         <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
           <div class="aspect-ratio aspect-ratio--3x4">
             <span style="background-image:url(http://miknosaj.github.io/img/tanner.jpg);" class="cover bg-center aspect-ratio--object"></span>
@@ -37,12 +37,13 @@
         </div>
         <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
           <div class="aspect-ratio aspect-ratio--3x4">
-            <span style="background-image:url(http://miknosaj.github.io/img/jialun_robot.jpg);" class="cover bg-center aspect-ratio--object"></span>
+            <span style="background-image:url(http://miknosaj.github.io/img/window.jpg);" class="cover bg-center aspect-ratio--object"></span>
           </div>
         </div>
         <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
-        </div>
-        <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
+          <div class="aspect-ratio aspect-ratio--3x4">
+            <span style="background-image:url(http://miknosaj.github.io/img/gallant.jpg);" class="cover bg-center aspect-ratio--object"></span>
+          </div>
         </div>
         <section class="fl w-100">
           <div class="fl w-100 w-100-m w-50-l pv3 pa3-m pa4-l">
@@ -50,47 +51,33 @@
               <span style="background-image:url(http://miknosaj.github.io/img/game.jpg);" class="cover bg-center aspect-ratio--object"></span>
             </div>
           </div>
-          <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
-          </div>
-          <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
-            <p class="f6 lh-copy measure">
-              Only through constant practice and strictest self-criticism may we
-              develop a sense for a perfect piece of work. Unfortunately, most
-              seem content with a middling performance. Careful spacing of words
-              and the correct spacing of capital letters appear to be unknown or
-              unimportant to some typesetters, yet for him who investigates, the
-              correct rules are not difficult to discover.
+          <div class="fl w-100 w-25-m w-25-l pa3-m pa4-l">
+            <p class="lh-title f5 b mt0">
+              The basic material of photographs is not intrinsically beautiful. It’s not like ivory or tapestry or bronze or oil on canvas. You’re not supposed to look at the thing, you’re supposed to look through it. It’s a window. And everything behind it has got to be organized as a space full of stuff, even if it’s only air.
+            </p>
+            <p class="lh-title f5 b mt0">
+              - <a class="link white bb" href="http://www.laweekly.com/arts/talking-pictures-2146502">John Szarkowski</a>
             </p>
           </div>
+          <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
+            <div class="aspect-ratio aspect-ratio--3x4">
+              <span style="background-image:url(http://miknosaj.github.io/img/IMG_5424.jpg);" class="cover bg-center aspect-ratio--object"></span>
+            </div>
+          </div>
       </section>
+      <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
+        <div class="aspect-ratio aspect-ratio--3x4">
+          <span style="background-image:url(http://miknosaj.github.io/img/jialun_robot.jpg);" class="cover bg-center aspect-ratio--object"></span>
+        </div>
+      </div>
         <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
           <div class="aspect-ratio aspect-ratio--3x4">
-            <span style="background-image:url(http://miknosaj.github.io/img/IMG_5424.jpg);" class="cover bg-center aspect-ratio--object"></span>
+            <span style="background-image:url(http://miknosaj.github.io/img/turrell.jpg);" class="cover bg-center aspect-ratio--object"></span>
           </div>
         </div>
-        <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
-          <div class="aspect-ratio aspect-ratio--3x4">
+        <div class="fl w-100 w-100-m w-50-l pv3 pa3-m pa4-l">
+          <div class="aspect-ratio aspect-ratio--16x9">
             <span style="background-image:url(http://miknosaj.github.io/img/reach4.jpg);" class="cover bg-center aspect-ratio--object"></span>
-          </div>
-        </div>
-        <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
-          <div class="aspect-ratio aspect-ratio--3x4">
-            <span style="background-image:url(http://mrmrs.github.io/images/0004.jpg);" class="cover bg-center aspect-ratio--object"></span>
-          </div>
-        </div>
-        <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
-          <div class="aspect-ratio aspect-ratio--3x4">
-            <span style="background-image:url(http://mrmrs.github.io/images/0002.jpg);" class="cover bg-center aspect-ratio--object"></span>
-          </div>
-        </div>
-        <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
-          <div class="aspect-ratio aspect-ratio--3x4">
-            <span style="background-image:url(http://mrmrs.github.io/images/0020.jpg);" class="cover bg-center aspect-ratio--object"></span>
-          </div>
-        </div>
-        <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
-          <div class="aspect-ratio aspect-ratio--3x4">
-            <span style="background-image:url(http://mrmrs.github.io/images/0013.jpg);" class="cover bg-center aspect-ratio--object"></span>
           </div>
         </div>
       </section>
