add tiger photo for index page

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           </article>
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
             <div class="aspect-ratio aspect-ratio--8x5 dim">
-              <a class="br4 db aspect-ratio--object cover" href="work/photography.html" style="background:url(img/reach1.jpg) no-repeat center center"></a>
+              <a class="br4 db aspect-ratio--object cover" href="work/photography.html" style="background:url(img/tiger.jpg) no-repeat center center"></a>
             </div>
             <p class="mt3 mb0 f6 light-blue">*click* *click*</p>
             <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
