add more optimized images

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="show-second cf ph2 ph0-l w-70-l fr-l mb3">
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
             <div class="aspect-ratio aspect-ratio--8x5 dim">
-              <a class="br4 db aspect-ratio--object cover" href="work/loree.html" style="background:url(img/loree_logo.gif) no-repeat center center"></a>
+              <a class="br4 db aspect-ratio--object cover" href="work/loree.html" style="background:url(img/loree.gif) no-repeat center center"></a>
             </div>
             <p class="mt3 mb0 f6 light-blue">Voice UI for Language and Culture</p>
             <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
