add finished index page

--- a/index.html
+++ b/index.html
@@ -12,14 +12,25 @@
   <link rel="shortcut icon" href="favicons/favicon.ico?v=2">
   <meta name="msapplication-config" content="favicons/browserconfig.xml">
 </head>
-<body class="bg-black near-white">
+<body class="bg-black near-white pt5-ns pt4">
+  <div class="mw8 center cf z-1 relative">
+       <div class="w-30-l fl-l tr-l ph3">
+           <h1 class="show-first f2 fw7 mb0 mt1 pv2 pr6">
+               <a href="/">
+                   <img class="w4" src="img/logo.svg" alt="">
+               </a>
+           </h1>
+       </div>
+       <ul class="show-second w-70-l fl-l list ph3 f4-ns mv3">
+           <li class="dib mr5-ns mr4"><a class="link bb white" href="https://www.linkedin.com/in/miknosaj/" target="_blank">résumé</a></li>
+           <li class="dib mr5-ns mr4"><a class="link bb white" href="http://instagram.com/kim.json" target="_blank">instagram</a></li>
+           <li class="dib fr"><a class="link bb white" href="#contact">contact</a></li>
+       </ul>
+   </div>
   <div class="mw8 center">
     <main class="cf relative z-1">
-      <div class="cf ph3-l pt6-l pt5 pb5-ns pb3">
-        <section class="test w-30-l fl-l ph3">
-          <h1 class="show-first fw7 f2-l f2-ns f5 lh-title mt0">Jason Kim</h1>
-        </section>
-        <section class="fl w-80 w-60-m w-50-l cf ph3">
+      <div class="cf ph3-l pt5-l pt4 pb5-ns pb3">
+        <section class="fr w-100 w-100-m w-70-l cf ph3">
           <p class="show-second mt0 mb2 f2-l f2-ns f5 lh-title">Product + UX Designer</p>
           <p class="show-second mt0 mb0 f4-l f4-ns f5 lh-copy light-silver">Trying to make design more lovable,</p>
           <p class="show-second mt0 f4-l f4-ns f5 lh-copy light-silver">one honest conversation at a time ❤️</p>
@@ -71,7 +82,7 @@
           </article>
         </section>
       </div>
-      <div class="show-second mt0 cf ph3-l pt0 pb5">
+      <div id="contact" class="show-second mt0 cf ph3-l pt0 pb5">
         <div class="w-30-l fl-l ph3">
           <h2 class="pv3 fw7 f3-l f3-ns f5 lh-title mt0 light-silver">Say Hi 👋</h2>
         </div>
