--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
            <li class="dib fr"><a class="link bb white" href="#contact">contact</a></li>
        </ul>
    </div>
-  <div class="mw8 center">
+   <div class="show-first pv7-l pv5-m pv4 ph4 overflow-hidden text-marquee">
+     <div id="marquee" class="f-headliner-ns f-headliner nowrap fw9 relative">JASON JASON JASON JASON</div>
+   </div>
+    <div class="mw8 center">
     <main class="cf relative z-1">
       <div class="cf ph3-l pt5-l pt4 pb5-ns pb3">
         <section class="fr w-100 w-100-m w-70-l cf ph3">
@@ -41,7 +44,7 @@
       </div>
       <div class="cf ph3-l pv5-ns pv3">
         <section class="show-second w-30-l fl-l ph3">
-          <h2 class="fw7 f3-l f3-ns f5 lh-title mt0 light-silver">Work</h2>
+          <h2 class="fw3 f3-l f3-ns f4 lh-title mt0 light-silver">Work</h2>
         </section>
         <section class="show-second cf ph2 ph0-l w-70-l fr-l mb3">
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
@@ -84,7 +87,7 @@
       </div>
       <div id="contact" class="show-second mt0 cf ph3-l pt0 pb5">
         <div class="w-30-l fl-l ph3">
-          <h2 class="pv3 fw7 f3-l f3-ns f5 lh-title mt0 light-silver">Say Hi 👋</h2>
+          <h2 class="pv3 fw7 f3-l f3-ns f4 lh-title mt0 light-silver">Say Hi 👋</h2>
         </div>
         <div class="w-70-l fr-l">
           <div class="flex flex-wrap f3 fw5 lh-title">
