--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="msapplication-config" content="favicons/browserconfig.xml">
 </head>
 <body class="bg-black near-white pt5-ns pt4">
-  <div class="mw8 center cf z-1 relative">
+  <div class="mw8 mb5-l center cf z-1 relative">
        <div class="w-30-l fl-l tr-l ph3">
            <h1 class="show-first f2 fw7 mb0 mt1 pv2 pr6">
                <a href="/">
@@ -27,12 +27,12 @@
            <li class="dib fr"><a class="link bb white" href="#contact">contact</a></li>
        </ul>
    </div>
-   <div class="show-first pv7-l pv5-m pv4 ph4 overflow-hidden text-marquee">
+   <div class="show-first pt6-l pb7-l pv5-m pv4 ph4 overflow-hidden text-marquee">
      <div id="marquee" class="f-headliner-ns f-headliner nowrap fw9 relative">JASON JASON JASON JASON</div>
    </div>
     <div class="mw8 center">
     <main class="cf relative z-1">
-      <div class="cf ph3-l pt5-l pt4 pb5-ns pb3">
+      <div class="cf ph3-l pt0-l pt3 pb5-ns pb3">
         <section class="fr w-100 w-100-m w-70-l cf ph3">
           <p class="show-second mt0 mb2 f2-l f2-ns f5 lh-title">Product + UX Designer</p>
           <p class="show-second mt0 mb0 f4-l f4-ns f5 lh-copy light-silver">Trying to make design more lovable,</p>
