--- a/work/loree.html
+++ b/work/loree.html
@@ -30,18 +30,29 @@
             “How might Voice UI's be used as tools for learning and celebrating the values of our cultures?”
           </p>
         </blockquote>
-        <a  href="http://awards.ixda.org/blog/2017/the-2018-interaction-awards-shortlist/"><img class="w-30 w-20-ns" src="../img/2018-interaction-shortlist.png"></img></a>
-        <div class="show-second w- aspect-ratio aspect-ratio--16x9 mt0 mb5">
-          <iframe src="https://player.vimeo.com/video/229846750?title=0&byline=0&portrait=0" class="aspect-ratio--object" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+        <div class="w-100 w-70-l center"
+          <a  href="http://awards.ixda.org/blog/2017/the-2018-interaction-awards-shortlist/"><img class="w-30 w-20-ns" src="../img/2018-interaction-shortlist.png"></img></a>
+          <div class="show-second w- aspect-ratio aspect-ratio--16x9 mt0 mb5">
+            <iframe src="https://player.vimeo.com/video/229846750?title=0&byline=0&portrait=0" class="aspect-ratio--object" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+          </div>
+          <div class=" f6 center mv4 ">
+            <p class="lh-copy  f6 f5-ns">
+              Loree is an Artificially Intelligent companion that incorporates language through conversation and storytelling to introduce cultural concepts to children in immigrant families. As children grow older and their speech patterns become more complex, Loree helps expand their understanding of abstract concepts and ensures that parents are taking an active role in this learning process.
+            </p>
+          </div>
         </div>
-        <div class=" f6 center mv4 ">
-          <p class="lh-copy  f6 f5-ns">
-            Loree is an Artificially Intelligent companion that incorporates language through conversation and storytelling to introduce cultural concepts to children in immigrant families. As children grow older and their speech patterns become more complex, Loree helps expand their understanding of abstract concepts and ensures that parents are taking an active role in this learning process.
-          </p>
-        </div>
+        <h2 class="fw6 f3 fl w-100 mb3 ">INTRODUCTION</h2>
+        <p class="measure-wide db lh-copy fw1 mv0 f6 f5-m f3-l ">
+          Voice activated assistants are some of the hottest products in the smart-home market and yet, despite significant innovation in hardware, and the many talented developers that work on making them as 'smart' as they are, voice assistants are still remarkably irrelevant.
+        </p>
+        <p class="db lh-copy fw1 mb0 mt3 f6 f5-m f5-l ">
+          Even now, most voice assistants follow a command/response paradigm that is only working to streamline screen-based navigation. Our team wanted to go beyond that paradigm and design a voice UI that looked at voice in a new way and took its strengths into account by highlighting conversation as a unique and humanized interaction. 
+        </p>
       </div>
     </article>
   </main>
   <script src="../js/main.js"></script>
 </body>
 </html>
+
+<!-- take a look at this please jason http://tachyons.io/components/quotes/pull-quote/index.html -->
