--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
            <li class="dib fr"><a class="link bb white" href="#contact">contact</a></li>
        </ul>
    </div>
-   <div class="show-first pt6-l pb7-l pv5-m pv4 ph4 overflow-hidden text-marquee">
+   <div class="show-first pt6-l pb7-l pt5-m pb6-m  pv4 ph4 overflow-hidden text-marquee">
      <div id="marquee" class="f-headliner-ns f-headliner nowrap fw9 relative">jason jason jason jason jason</div>
    </div>
     <div class="mw8 center">
