add illustrations page

--- a/work/photography.html
+++ b/work/photography.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Jason Kim - Illustrations</title>
+  <title>Jason Kim - Photography</title>
   <link rel="stylesheet" href="https://unpkg.com/tachyons@4.6.1/css/tachyons.min.css"/>
   <link rel="stylesheet" href="../css/custom.css"/>
   <link rel="apple-touch-icon" sizes="152x152" href="../favicons/apple-touch-icon.png?v=2">
@@ -27,28 +27,28 @@
       <section class="show-second fl w-100">
         <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
           <div class="aspect-ratio aspect-ratio--3x4">
-            <span style="background-image:url(http://miknosaj.github.io/img/tanner.jpg);" class="cover bg-center aspect-ratio--object"></span>
+            <span style="background-image:url(../img/tanner.jpg);" class="cover bg-center aspect-ratio--object"></span>
           </div>
         </div>
         <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
           <div class="aspect-ratio aspect-ratio--3x4">
-            <span style="background-image:url(http://miknosaj.github.io/img/austin.jpg);" class="cover bg-center aspect-ratio--object"></span>
+            <span style="background-image:url(../img/austin.jpg);" class="cover bg-center aspect-ratio--object"></span>
           </div>
         </div>
         <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
           <div class="aspect-ratio aspect-ratio--3x4">
-            <span style="background-image:url(http://miknosaj.github.io/img/window.jpg);" class="cover bg-center aspect-ratio--object"></span>
+            <span style="background-image:url(../img/window.jpg);" class="cover bg-center aspect-ratio--object"></span>
           </div>
         </div>
         <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
           <div class="aspect-ratio aspect-ratio--3x4">
-            <span style="background-image:url(http://miknosaj.github.io/img/gallant.jpg);" class="cover bg-center aspect-ratio--object"></span>
+            <span style="background-image:url(../img/gallant.jpg);" class="cover bg-center aspect-ratio--object"></span>
           </div>
         </div>
         <section class="fl w-100">
           <div class="fl w-100 w-100-m w-50-l pv3 pa3-m pa4-l">
             <div class="aspect-ratio aspect-ratio--16x9">
-              <span style="background-image:url(http://miknosaj.github.io/img/game.jpg);" class="cover bg-center aspect-ratio--object"></span>
+              <span style="background-image:url(../img/game.jpg);" class="cover bg-center aspect-ratio--object"></span>
             </div>
           </div>
           <div class="fl w-100 w-25-m w-25-l pa3-m pa4-l">
@@ -61,23 +61,23 @@
           </div>
           <div class="fl w-100 w-50-m w-25-l pa3-m pa4-l">
             <div class="aspect-ratio aspect-ratio--3x4">
-              <span style="background-image:url(http://miknosaj.github.io/img/IMG_5424.jpg);" class="cover bg-center aspect-ratio--object"></span>
+              <span style="background-image:url(../img/IMG_5424.jpg);" class="cover bg-center aspect-ratio--object"></span>
             </div>
           </div>
       </section>
       <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
         <div class="aspect-ratio aspect-ratio--3x4">
-          <span style="background-image:url(http://miknosaj.github.io/img/jialun_robot.jpg);" class="cover bg-center aspect-ratio--object"></span>
+          <span style="background-image:url(../img/jialun_robot.jpg);" class="cover bg-center aspect-ratio--object"></span>
         </div>
       </div>
         <div class="fl w-100 w-50-m w-25-l pv3 pa3-m pa4-l">
           <div class="aspect-ratio aspect-ratio--3x4">
-            <span style="background-image:url(http://miknosaj.github.io/img/turrell.jpg);" class="cover bg-center aspect-ratio--object"></span>
+            <span style="background-image:url(../img/turrell.jpg);" class="cover bg-center aspect-ratio--object"></span>
           </div>
         </div>
         <div class="fl w-100 w-100-m w-50-l pv3 pa3-m pa4-l">
           <div class="aspect-ratio aspect-ratio--16x9">
-            <span style="background-image:url(http://miknosaj.github.io/img/reach4.jpg);" class="cover bg-center aspect-ratio--object"></span>
+            <span style="background-image:url(../img/reach4.jpg);" class="cover bg-center aspect-ratio--object"></span>
           </div>
         </div>
       </section>
