white outline text marquee and fixing some margin stuff

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="msapplication-config" content="favicons/browserconfig.xml">
 </head>
 <body class="bg-black near-white pt5-ns pt4">
-  <div class="mw8 mb5-l center cf z-1 relative">
+  <div class="mw8 center cf z-1 relative">
        <div class="w-30-l fl-l tr-l ph3">
            <h1 class="show-first f2 fw7 mb0 mt1 pv2 pr6">
                <a href="/">
@@ -27,7 +27,7 @@
            <li class="dib fr"><a class="link bb white" href="#contact">contact</a></li>
        </ul>
    </div>
-   <div class="show-first pt6-l pb7-l pt5-m pb6-m  pv4 ph4 overflow-hidden text-marquee">
+   <div class="show-first pt7-l pb7-l pt5-m pb6-m pt4 pb5 ph4 overflow-hidden text-marquee">
      <div id="marquee" class="f-headliner-ns f-headliner nowrap fw9 relative">jason jason jason jason jason</div>
    </div>
     <div class="mw8 center">
