--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
           <p class="show-second mt0 mb0 f4-l f4-ns f5 lh-copy light-silver">Trying to make design more lovable,</p>
           <p class="show-second mt0 f4-l f4-ns f5 lh-copy light-silver">one honest conversation at a time ❤️</p>
           <p class="show-third mt0 f4-l f4-ns f5 lh-copy light-silver">
-            <a class="link light-blue bb" href="work/about.html">But who the heck is Jason Kim?</a>
+            <a class="link red bb" href="work/about.html">But who the heck is Jason Kim?</a>
           </p>
         </section>
       </div>
       <div class="cf ph3-l pv5-ns pv3">
         <section class="show-second w-30-l fl-l ph3">
-          <h2 class="fw3 f3-l f3-ns f4 lh-title mt0 light-silver">Work</h2>
+          <h2 class="fw3 f3-l f3-ns f4 lh-title mt0 light-silver">Work 📚</h2>
         </section>
         <section class="show-second cf ph2 ph0-l w-70-l fr-l mb3">
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
@@ -58,7 +58,7 @@
           </article>
           <article class="w-100 mb4-ns mb3 ph3-l ph2 fl">
             <div class="aspect-ratio aspect-ratio--8x5 dim">
-              <a class="br4 db aspect-ratio--object cover" href="" style="background:url(img/medialets.jpg) no-repeat center center"></a>
+              <a class="br4 db aspect-ratio--object cover" href="work/medialets.html" style="background:url(img/medialets.jpg) no-repeat center center"></a>
             </div>
             <p class="mt3 mb0 f6 light-blue">Data-Inspired User Experience</p>
             <h3 class="mb3 mt0 f3-l f3-ns f5 fw3 lh-copy">
