fix margins on medialets page

--- a/work/medialets.html
+++ b/work/medialets.html
@@ -36,7 +36,7 @@
         Designing a new Alerts notification panel for the platform from the ground up.
       </p>
 
-      <h2 class="show-first pb3 yellow fs4 f4 f1-ns bb measure-narrow center">understand</h2>
+      <h2 class="show-first pb3 mt4 mt5-ns yellow fs4 f4 f1-ns bb measure-narrow center">understand</h2>
       <p class="show-first f6 f5-ns lh-copy measure-wide center">
         It was crucial for me to understand the background of our products and its various stakeholders across the departments to better understand our industry, clients, and users. I used these insights to answer several important questions.
       </p>
@@ -89,7 +89,7 @@
 
 
 
-      <h2 class="show-first pb3 yellow fs4 f4 f1-ns bb measure-narrow center">ideate</h2>
+      <h2 class="show-first pb3 mt4 mt5-ns yellow fs4 f4 f1-ns bb measure-narrow center">ideate</h2>
       <p class="show-first bb f6 f5-ns lh-copy measure-wide center">
         Report Builder
       </p>
@@ -137,7 +137,7 @@
         This flow demonstrates how information starts in digestible parts which allow users to take action if necessary rather than having to see everything in separate parts across different apps.
       </p>
 
-      <h2 class="show-first pb3 yellow fs4 f4 f1-ns bb measure-narrow center">iterate (iterate iterate iterate)</h2>
+      <h2 class="show-first pb3 mt4 mt5-ns yellow fs4 f4 f1-ns bb measure-narrow center">iterate (iterate iterate iterate)</h2>
       <p class="show-first f6 f5-ns lh-copy measure-wide center">
         Sketches for Report Builder
       </p>
@@ -180,7 +180,7 @@
       </section>
 
 
-      <h2 class="show-first pb3 yellow fs4 f4 f1-ns bb measure-narrow center">design & prototype</h2>
+      <h2 class="show-first pb3 mt4 mt5-ns yellow fs4 f4 f1-ns bb measure-narrow center">design & prototype</h2>
       <p class="show-first pt3 bb f6 f5-ns lh-copy measure-wide center">
         New and improved Report Builder
       </p>
