add google analytics tracking to each page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
   <link rel="icon" type="image/png" href="favicons/favicon-16x16.png?v=2" sizes="16x16">
   <link rel="shortcut icon" href="favicons/favicon.ico?v=2">
   <meta name="msapplication-config" content="favicons/browserconfig.xml">
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-111680878-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-111680878-1');
+</script>
+
 </head>
 <body class="bg-black near-white pt5-ns pt4">
   <div class="mw8 center cf z-1 relative">
