--- a/work/photography.html
+++ b/work/photography.html
@@ -11,6 +11,13 @@
   <link rel="icon" type="image/png" href="../favicons/favicon-16x16.png?v=2" sizes="16x16">
   <link rel="shortcut icon" href="favicons../favicon.ico?v=2">
   <meta name="msapplication-config" content="../favicons/browserconfig.xml">
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-111680878-1');
+  </script>
 </head>
 <body class="bg-black near-white">
   <main>
@@ -20,7 +27,7 @@
           ← back
         </a>
         <h2 class="lh-title f3 b mt0">
-          Ducasse says to his friend Mallarmé, “You know, I’ve got a lot of good ideas for poems, but the poems are never very good.” 
+          Ducasse says to his friend Mallarmé, “You know, I’ve got a lot of good ideas for poems, but the poems are never very good.”
           Mallarmé says, “Of course, you don’t make poems out of ideas, you make poems out of words.
         </h2>
       </header>
@@ -81,7 +88,7 @@
           </div>
         </div>
       </section>
-       
+
 
     </article>
   </main>
