--- a/work/about.html
+++ b/work/about.html
@@ -11,6 +11,13 @@
   <link rel="icon" type="image/png" href="../favicons/favicon-16x16.png?v=2" sizes="16x16">
   <link rel="shortcut icon" href="favicons../favicon.ico?v=2">
   <meta name="msapplication-config" content="../favicons/browserconfig.xml">
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-111680878-1');
+  </script>
 </head>
 <body class="bg-black white">
   <main class="cf pa3 pa4-m pa5-l mw9 center">
@@ -29,17 +36,17 @@
       <div class="show-fourth fl-ns w-100 w-20-l pr3-m pr5-l">
         <p>
           NYC based<br class="dn db-l"> Product & UX Designer
-        </p> 
+        </p>
       </div>
       <div class="show-second fl-ns w-50-m w-20-l pr3-m pr5-l">
         <p>
           I use design to help foster better relationships between people and their experiences.
-        </p> 
+        </p>
       </div>
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
         <p>
           Previously @ <a class="link white bb" href="http://www.momentdesign.com/">Moment</a> in NYC
-        </p> 
+        </p>
       </div>
       <div class="show-fourth fl-ns w-50-m w-20-l pr3-m pr5-l">
         <p>
