--- a/work/illustrations.html
+++ b/work/illustrations.html
@@ -11,6 +11,13 @@
   <link rel="icon" type="image/png" href="../favicons/favicon-16x16.png?v=2" sizes="16x16">
   <link rel="shortcut icon" href="favicons../favicon.ico?v=2">
   <meta name="msapplication-config" content="../favicons/browserconfig.xml">
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-111680878-1');
+  </script>
 </head>
 <body class="bg-black near-white">
   <main>
@@ -54,7 +61,7 @@
           </div>
       </section>
       </section>
-       
+
 
     </article>
   </main>
